# QindieGL

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: CMakeLists.txt  dxerr9.h
code/: d3d_array.cpp  d3d_blend.cpp  d3d_clip.cpp  d3d_combiners.cpp  d3d_cpu_detect.cpp  d3d_extension.cpp  d3d_extension.hpp  d3d_get.cpp  d3d_global.cpp  d3d_global.hpp  d3d_immediate.cpp  d3d_light.cpp  d3d_material.cpp  d3d_matrix.cpp  d3d_misc.cpp  d3d_pixels.cpp  d3d_state.cpp  d3d_state.hpp  d3d_stencil.cpp  d3d_texgen.cpp  d3d_texture.cpp  d3d_texture.hpp  d3d_wrapper.cpp  win_imgui.cpp
idtech3_mixup/: CMakeLists.txt  h2_refgl.cpp
msvc/: QindieGL.rc  resource.h
reg/: QindieGL-setup.reg
